container checking done

--- a/bootstarap-practice.html
+++ b/bootstarap-practice.html
@@ -11,7 +11,21 @@
 
   </head>
   <body>
-      sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy
+
+
+
+        <!-- *Container Experiment Done -->
+        <section  class="d-flex container-sm bg-danger">
+            <div><img class="img-fluid" src="./images/player-1.png" alt=""></div>
+            <div><img class="img-fluid" src="./images/player-3.png" alt=""></div>
+            <div><img class="img-fluid" src="./images/player-3.png" alt=""></div>
+            <div><img class="img-fluid" src="./images/player-4.png" alt=""></div>
+            <div><img class="img-fluid" src="./images/player-5.png" alt=""></div>
+        </section>
+        <!-- *Container Experiment Done -->
+
+
+
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 
