gutter grid and gap also grid gap are clear

--- a/bootstarap-practice.html
+++ b/bootstarap-practice.html
@@ -15,7 +15,7 @@
 
 
         <!-- *Container Experiment Done -->
-        <section  class="d-flex container-sm bg-danger">
+        <section  class="d-flex container-sm bg-primary mb-5">
             <div><img class="img-fluid" src="./images/player-1.png" alt=""></div>
             <div><img class="img-fluid" src="./images/player-3.png" alt=""></div>
             <div><img class="img-fluid" src="./images/player-3.png" alt=""></div>
@@ -23,6 +23,20 @@
             <div><img class="img-fluid" src="./images/player-5.png" alt=""></div>
         </section>
         <!-- *Container Experiment Done -->
+
+
+
+
+        <!-- *grid layout exploring -->
+        <section  class=" gap-2 container-md bg-light mt-5 justify-content-center row">
+            <div class="col-3 border border-2"><img class="img-fluid" src="./images/player-1.png" alt=""></div>
+            <div class="col-3 border border-2"><img class="img-fluid" src="./images/player-3.png" alt=""></div>
+            <div class="col-3 border border-2"><img class="img-fluid" src="./images/player-3.png" alt=""></div>
+            <div class="col-3 border border-2"><img class="img-fluid" src="./images/player-4.png" alt=""></div>
+            <div class="col-3 border border-2"><img class="img-fluid" src="./images/player-5.png" alt=""></div>
+        </section
+        <!-- *grid layout exploring -->
+
 
 
 
