grid experiment done

--- a/bootstarap-practice.html
+++ b/bootstarap-practice.html
@@ -40,6 +40,32 @@
 
 
 
+
+        <!-- *grid layout Variation -->
+        <section  class="gap-2 container-md bg-light mt-5 justify-content-center row">
+            <div class="col-3 border border-2"><img class="img-fluid" src="./images/player-1.png" alt=""></div>
+            <div class="col-3 border border-2"><img class="img-fluid" src="./images/player-3.png" alt=""></div>
+            <div class="col-2 border border-2"><img class="img-fluid" src="./images/player-3.png" alt=""></div>
+            <div class="col-2 border border-2"><img class="img-fluid" src="./images/player-4.png" alt=""></div>
+            <div class="col-2 border border-2"><img class="img-fluid" src="./images/player-5.png" alt=""></div>
+        </section
+        <!-- *grid layout Variation -->
+
+
+
+        
+        <!-- *grid layout Variation -->
+        <section  class=" row row-cols-5 bg-light mt-5 justify-content-center ">
+            <div class=" border border-2"><img class="img-fluid" src="./images/player-1.png" alt=""></div>
+            <div class=" border border-2"><img class="img-fluid" src="./images/player-3.png" alt=""></div>
+            <div class=" border border-2"><img class="img-fluid" src="./images/player-3.png" alt=""></div>
+            <div class=" border border-2"><img class="img-fluid" src="./images/player-4.png" alt=""></div>
+            <div class=" border border-2"><img class="img-fluid" src="./images/player-5.png" alt=""></div>
+        </section
+        <!-- *grid layout Variation -->
+
+
+
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 
