grid work with properly with gutter not gap

--- a/bootstarap-practice.html
+++ b/bootstarap-practice.html
@@ -42,12 +42,12 @@
 
 
         <!-- *grid layout Variation -->
-        <section  class="gap-2 container-md bg-light mt-5 justify-content-center row">
-            <div class="col-3 border border-2"><img class="img-fluid" src="./images/player-1.png" alt=""></div>
-            <div class="col-3 border border-2"><img class="img-fluid" src="./images/player-3.png" alt=""></div>
-            <div class="col-2 border border-2"><img class="img-fluid" src="./images/player-3.png" alt=""></div>
-            <div class="col-2 border border-2"><img class="img-fluid" src="./images/player-4.png" alt=""></div>
-            <div class="col-2 border border-2"><img class="img-fluid" src="./images/player-5.png" alt=""></div>
+        <section  class="container-md bg-danger mt-5 justify-content-center row">
+            <div class="col-md-3 border border-2"><img class="img-fluid" src="./images/player-1.png" alt=""></div>
+            <div class="col-md-3 border border-2"><img class="img-fluid" src="./images/player-3.png" alt=""></div>
+            <div class="col-md-2 border border-2"><img class="img-fluid" src="./images/player-3.png" alt=""></div>
+            <div class="col-md-2 border border-2"><img class="img-fluid" src="./images/player-4.png" alt=""></div>
+            <div class="col-md-2 border border-2"><img class="img-fluid" src="./images/player-5.png" alt=""></div>
         </section
         <!-- *grid layout Variation -->
 
@@ -63,6 +63,11 @@
             <div class=" border border-2"><img class="img-fluid" src="./images/player-5.png" alt=""></div>
         </section
         <!-- *grid layout Variation -->
+
+
+
+
+        <!-- Flex grow Experiment -->
 
 
 
