fully responsive learned very well im satified it as huge and great achivement today

--- a/rem-and-rem.html
+++ b/rem-and-rem.html
@@ -16,9 +16,54 @@
     <!-- Style Shit for rem and em -->
 
   </head>
-  <body>
+  <body class="text-center">
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi sit similique labore nostrum? Velit quam amet quo eius officiis inventore autem iste.</p>
+    
+<!-- * Rem depends on Html or body i  to root section -->
+<p>Rem Depends on to section like html and body section</p>
+
+
+
+<main>
+    <p>Rem This is soo cool for work.</p>
+</main>
+<!-- * Rem depends on Html or body i  to root section -->
+
+
+
+
+
+
+<!-- *-----------
+    *em section
+*------------ -->
+
+<Section>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident nisi beatae quas. Sapiente placeat voluptates omnis rerum consequatur harum. Exercitationem est eligendi neque voluptate accusamus fuga sapiente, delectus laborum magni!</p>
+</Section>
+
+<!-- *-----------
+    *em section
+*------------ -->
+
+
+
+
+
+<!--* em use for nwo card responsive  -->
+<div class="card">
+    <img class="card-img-top" src="./images/player-1.png" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+
+<!--* em use for nwo card responsive  -->
+
+
 
 
 
